v9.20
(2025-12-13)

Enhancement:
- Orange Pi 5/Max/Ultra | Our images ship now with all USB-A ports and, depending on model, one USB-C port enabled in host mode, making them functional for USB devices. This is done with a device tree overlay "dwc3-host". Removing it from /boot/dietpiEnv.txt reverts the affected port(s), which share one controller, to their default OTG mode, in which case attached USB devices are not detected or even powered. For existing instances, add "dwc3-host" to the "overlays=" line in /boot/dietpiEnv.txt to apply this change. Many thanks to @DiegoBM and @pavel-kamaev for reporting this issue: https://github.com/MichaIng/DietPi/issues/7738
- Radxa ZERO 3 | New images will ship with Linux 6.12 mainline LTS kernel now, and the DietPi update migrates systems with legacy and vendor kernel to mainline LTS as well.