@@ -596,6 +596,7 @@ shopt -s extglob # +(expr) syntax
 	do
 		aSOFTWARE_NAME9_20[i]=${aSOFTWARE_NAME9_19[i]}
 	done
+	aSOFTWARE_NAME9_20[12]='RustDesk'
 
 	# Pre-create software counter array so that we can see also software (available in newest version) with 0 installs
 	for i in "${aSOFTWARE_NAME9_20[@]}"
