@@ -295,6 +295,8 @@ _EOF_
 				'vncserver'
 				'xrdp'
 				'nxserver'		# NoMachine
+				'rustdesksignal'
+				'rustdeskrelay'
 
 				# VPN: Servers as well as client shall not be DietPi-controlled. VPN servers may be used for remote maintenance sessions, VPN clients may be wanted/needed for anonymised Internet requests.
 				#'wg-quick@wg0'		# Currently instantiated services are not supported
